@@ -2,6 +2,7 @@ Developers:
 -----------
 
 Nick Treleaven <nick(dot)treleaven(at)btinternet(dot)com>
+Colomban Wendling <lists(dot)ban(at)herbesfolles(dot)org>
 Enrico Troeger <enrico(dot)troeger(at)uvena(dot)de>
 Frank Lanitz <frank(at)frank(dot)uvena(dot)de>
 
