@@ -82,7 +82,8 @@ list to stay informed about major changes and of course, new releases.
 
 
 --
-2008-2011 by Enrico Tröger, Nick Treleaven and Frank Lanitz
+2008-2011 by Enrico Tröger, Nick Treleaven, Colomban Wendling and Frank Lanitz
 enrico(dot)troeger(at)uvena(dot)de
 nick(dot)treleaven(at)btinternet(dot)com
+lists(dot)ban(at)herbesfolles(dot)org
 frank(at)frank(dot)uvena(dot)de
